--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <![endif]-->
   </head>
 
-  <body data-spy="scroll" data-target=".navbar-collapse">
+  <body data-spy="scroll" data-target=".nav navbar-nav">
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
