--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Who We Are?</a></li>
-                <li><a href="#about">Get Involved</a></li>
+                <li class="active"><a href="#who">Who We Are?</a></li>
+                <li><a href="#get-involved">Get Involved</a></li>
               </ul>
             </div><!--/.nav-collapse -->
           </div>
@@ -67,12 +67,14 @@
         <img src="images/code.png" title="Code.org logo" alt="Code.org" />
       </div>
     </div>
+    <div id="who">
     <div class="container homepage">
       <img src="images/academy_brand_med.png" />
       <h2>Who We Are</h2>
       <hr>
         <p>We are <a href="http://www.massiveacademy.us" target="_blank">MASSIVE Academy</a>. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
-</div><em><br></em>
+</div>
+</div>
 
 
     </div>
