--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
               </button>
               <a class="navbar-brand" href="#"><img src="images/top_logo.png" /></a>
             </div>
-            <div id="navbar" class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#who">Who We Are?</a></li>
+                <li><a href="#who">Who We Are?</a></li>
                 <li><a href="#get-involved">Get Involved</a></li>
               </ul>
             </div><!--/.nav-collapse -->
