--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="#who">Who We Are?</a></li>
+                <li class="active"><a href="#who">Who We Are?</a></li>
                 <li><a href="#get-involved">Get Involved</a></li>
               </ul>
             </div><!--/.nav-collapse -->
