SmoothScroll Top Header

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div id="jumbotron" class="jumbotron">
       <div class="container">
         <h1>Our goal is to inspire<br> Tallahassee to write 1,000,000<br>lines of code_</h1>
         <p>All over the country people are taking the 
